--- a/src/main/resources/templates/cardOrder/job.html
+++ b/src/main/resources/templates/cardOrder/job.html
@@ -88,12 +88,12 @@
                             </div>
 
                             <!--/*"ご本人"の入力値を引き回すための隠し項目*/-->
-                            <input type="hidden" name="kanjiName" th:value="${form.kanjiName_F}"/>
-                            <input type="hidden" name="kanjiName" th:value="${form.kanjiName_L}"/>
-                            <input type="hidden" name="kanaName" th:value="${form.kanaName_L}"/>
-                            <input type="hidden" name="kanaName" th:value="${form.kanaName_F}"/>
-                            <input type="hidden" name="alphabetName" th:value="${form.alphabetName_F}"/>
-                            <input type="hidden" name="alphabetName" th:value="${form.alphabetName_L}"/>
+                            <input type="hidden" name="kanjiName_L" th:value="${form.kanjiName_L}"/>
+                            <input type="hidden" name="kanjiName_F" th:value="${form.kanjiName_F}"/>
+                            <input type="hidden" name="kanaName_L" th:value="${form.kanaName_L}"/>
+                            <input type="hidden" name="kanaName_F" th:value="${form.kanaName_F}"/>
+                            <input type="hidden" name="alphabetName_L" th:value="${form.alphabetName_L}"/>
+                            <input type="hidden" name="alphabetName_F" th:value="${form.alphabetName_F}"/>
                             <input type="hidden" name="gender" th:value="${form.gender}"/>
                             <input type="hidden" name="dateOfBirth" th:value="${form.dateOfBirth}"/>
 
@@ -101,8 +101,12 @@
 
                             <input type="hidden" name="zipCode" th:value="${form.zipCode}"/>
                             <input type="hidden" name="address" th:value="${form.address}"/>
-                            <input type="hidden" name="homePhoneNumber" th:value="${form.homePhoneNumber}"/>
-                            <input type="hidden" name="mobilePhoneNumber" th:value="${form.mobilePhoneNumber}"/>
+                            <input type="hidden" name="homePhoneNumber_1" th:value="${form.homePhoneNumber_1}"/>
+                            <input type="hidden" name="homePhoneNumber_2" th:value="${form.homePhoneNumber_2}"/>
+                            <input type="hidden" name="homePhoneNumber_3" th:value="${form.homePhoneNumber_3}"/>
+                            <input type="hidden" name="mobilePhoneNumber_1" th:value="${form.mobilePhoneNumber_1}"/>
+                            <input type="hidden" name="mobilePhoneNumber_2" th:value="${form.mobilePhoneNumber_2}"/>
+                            <input type="hidden" name="mobilePhoneNumber_3" th:value="${form.mobilePhoneNumber_3}"/>
                             <input type="hidden" name="emailAddress" th:value="${form.emailAddress}"/>
                             <input type="hidden" name="emailAddress2" th:value="${form.emailAddress2}"/>
                             <input type="hidden" name="spouse" th:value="${form.spouse}"/>
