--- a/src/main/resources/templates/cardOrder/job.html
+++ b/src/main/resources/templates/cardOrder/job.html
@@ -17,7 +17,7 @@
                     <div class="ui segment metrixir">
                         <h1 class="ui aligned header teal">お申込み情報</h1>
 
-                        <form class="ui form" method="post" action="/cardOrder/conf">
+                        <form class="ui form" method="post" action="/cardOrder/">
 
                             <!-- /*エラーがあれば表示する*/ -->
                             <ul class="ui red basic label" th:if="${form.hasErrors()}">
@@ -97,8 +97,6 @@
                             <input type="hidden" name="gender" th:value="${form.gender}"/>
                             <input type="hidden" name="dateOfBirth" th:value="${form.dateOfBirth}"/>
 
-
-
                             <input type="hidden" name="zipCode" th:value="${form.zipCode}"/>
                             <input type="hidden" name="address" th:value="${form.address}"/>
                             <input type="hidden" name="homePhoneNumber_1" th:value="${form.homePhoneNumber_1}"/>
@@ -114,9 +112,7 @@
                             <input type="hidden" name="debt" th:value="${form.debt}"/>
                             <input type="hidden" name="income" th:value="${form.income}"/>
                             <input type="hidden" name="job" th:value="${form.job}"/>
-                            <input type="hidden" name="kanjiName" th:value="${form.kanjiName_l}"/>
-                            <input type="hidden" name="kanaName" th:value="${form.kanaName_l}"/>
-                            <input type="hidden" name="alphabetName" th:value="${form.alphabetName_l}"/>
+
 
 
                             <div class="ui column grid">
